# LykOS

kernel/include/: hhdm.h
kernel/include/arch/: paging.h
kernel/include/arch/x86_64/devices/: hpet.h
kernel/include/crypto/: hash.h
kernel/include/dev/: bus.h  device.h  driver.h  virtual.h
kernel/include/dev/storage/: drive.h
kernel/include/fs/: devfs.h  mount.h  path.h  ramfs.h  vfs.h
kernel/include/mm/: dma.h  mm.h  pm.h  vm.h
kernel/include/proc/: fd.h  sched.h  thread.h
kernel/include/utils/: container_of.h  list.h  ref.h  xarray.h
kernel/source/: kernel.c  meson.build
kernel/source/arch/aarch64/: entry.c  paging.c
kernel/source/arch/aarch64/abi/: stack.c
kernel/source/arch/x86_64/: entry.c  paging.c
kernel/source/arch/x86_64/abi/: stack.c
kernel/source/arch/x86_64/devices/: hpet.c
kernel/source/crypto/: djb2.c  meson.build
kernel/source/dev/: bus.c  meson.build
kernel/source/dev/storage/: drive.c  meson.build
kernel/source/dev/virtual/: fb.c  meson.build  virtual.c
kernel/source/fs/: devfs.c  meson.build  mount.c  path.c  ramfs.c  ustar.c  vfs.c
kernel/source/mm/: dma.c  mm.c  pm.c  vm.c
kernel/source/mod/: module.c
kernel/source/proc/: fd.c  init.c  proc.c  sched.c  smp.c  thread.c
kernel/source/sync/: spinlock.c
kernel/source/sys/: fileio.c  fs.c  memory.c  meson.build  proc.c  syscall.c
kernel/source/utils/: xarray.c
modules/: meson.build
modules/bus/pci/: main.c  meson.build
modules/storage/nvme/: main.c  nvme.c  nvme.h
